# Invesment-Perfomance

./: .gitignore  Makefile  README.md  pyproject.toml
interface-ui/: Makefile  main.py  pyproject.toml
project-doc/: mkdocs.yml
project-doc/docs/: about.md  configuration.md  index.md
server/: bun.lockb  index.ts  package.json  tsconfig.json
